# HFT-Trading

./: .env.example  .gitignore  AUTO-RELOAD.md  COMPLETION_REPORT.md  CONTROL_PANEL_GUIDE.md  CORS_FIX_2025-10-28.md  DAILY_MOVERS_COMPLETE.md  DAILY_MOVERS_FIX.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  MOVERS_STRATEGY_FINAL.md  MOVERS_STRATEGY_GUIDE.md  Makefile  PNL_CALCULATION_FIX_2025-10-28.md  PRODUCTION_READY.md  QUICK_START.md  RATE_LIMITING_FIX_2025-10-28.md  README.md  README_MOVERS_STRATEGY.md  RISK_MANAGEMENT_IMPLEMENTATION.md  START_HERE.md  STRATEGY_ENABLED.md  UPGRADE_SUMMARY.md  docker-compose.yml  env.template  linear-config.yml  reload-frontend.sh  test_risk_management.sh  watch-and-reload.sh
.github/workflows/: ci.yml  monitoring.yml
backend/: .env.example  Dockerfile  go.mod  main.go
backend/handlers/: account.go  analytics.go  health.go  health_test.go  movers.go  movers_strategy.go  orders.go  performance.go  positions.go  risk.go  websocket.go
docs/: openapi.yaml
engine/: CMakeLists.txt  Dockerfile
engine/include/: alpaca_client.hpp  api_benchmark.hpp  execution_engine.hpp  movers_strategy.hpp  order_book.hpp  polygon_client.hpp  redis_client.hpp
engine/src/: alpaca_client.cpp  api_benchmark.cpp  execution_engine.cpp  main.cpp  movers_strategy.cpp  order_book.cpp  polygon_client.cpp  redis_client.cpp
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
proto/: trading.proto
scripts/: backup.sh  migrate.sh  monitor.sh  restore.sh
strategy/: backtest.py  requirements.txt  signal_generator.py
(+50 files in other folders)
